fix: some styles skeleton version mobile, and position stiky head menu

--- a/app/main/components/magazine/magazine-skeleton/MagazineSkeleton.module.css
+++ b/app/main/components/magazine/magazine-skeleton/MagazineSkeleton.module.css
@@ -1,13 +1,18 @@
 .skeleton {
-    width: 100%;
-    height: 100%;
-    background-color: #2d2d2d;
-    border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: #2d2d2d;
+  border-radius: 10px;
 }
 
 .skeleton_item {
+  width: 413px;
+  height: 120px;
+
+  @media (min-width: 1025px) {
     width: 270.22px;
     height: 248px;
-    background-color: #2d2d2d;
-    border-radius: 10px;
+  }
+  background-color: #2d2d2d;
+  border-radius: 10px;
 }
